# Fast-Onboarding

./: .env.example  .gitignore  README.md  pyproject.toml  sitecustomize.py
deploy/nginx/: fast-onboarding.conf
docs/: file-change-log.csv
docs/change-records/: 2026-07-01-content-first-generation.md  2026-07-01-portal-workspace-projects.md  2026-07-01-project-structure-refactor.md  2026-07-01-resume-mvp.md  2026-07-01-user-database.md  2026-07-01-utils-agents.md  2026-07-01-web-ui-nginx.md  2026-07-01-workspace-page-switching.md  2026-07-01-zsc-word-resume-template.md  2026-07-02-authentic-ai-assistant.md  2026-07-02-business-persona-skill-routing.md  2026-07-02-everswap-inspired-3d-portal.md  2026-07-02-home-portal-workspace-route.md  2026-07-02-streaming-ai-chat.md  2026-07-02-tabbed-workspace-no-hash-routing.md  2026-07-17-fast-onboarding-project-skill.md
examples/: jd.sample.txt  profile.sample.json
scripts/: resume_mvp.py  serve_web.py
src/fast_onboarding/: __init__.py  resume_mvp.py
src/fast_onboarding/cli/: resume_mvp.py  web.py
src/fast_onboarding/web/: server.py  (+3 more)
tests/: test_00_path_setup.py  test_ai_assistant.py  test_company_search.py  test_compat_utils.py  test_deepseek_client.py  test_github_project_archiver.py  test_industry_monitor.py  test_persona_skills.py  test_resume_mvp.py  test_resume_word_agent.py  test_usage_limiter.py  test_user_database.py  test_web_server.py
utils/: __init__.py  company_search.py  config.py  deepseek_client.py  github_project_archiver.py  industry_monitor.py  resume_mvp.py  resume_word_agent.py  usage_limiter.py
(+15 files in other folders)
