[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-onboarding"
version = "0.1.0"
description = "Resume generator MVP with job-market and GitHub intelligence."
requires-python = ">=3.10"

[project.scripts]
fast-onboarding-resume = "fast_onboarding.cli.resume_mvp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
